--- a/GetMmdTransformationPlugin/Properties/Resources.resx
+++ b/GetMmdTransformationPlugin/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="GetMmdTransformation32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\getmmdtransformation32.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GetMmdTransformationContainer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\getmmdtransformationcontainer.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="GetMmdTransformationContainer64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GetMmdTransformationContainer64.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
